--- a/html/functions.html
+++ b/html/functions.html
@@ -10,5 +10,8 @@
 
     <button onclick="login()">Login</button>
     <script src="scripts/functions.js"></script>
+    <div>
+        
+    </div>
 </body>
 </html>
