--- a/html/assignment2.html
+++ b/html/assignment2.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Degree Converter</title>
+    <script src="https://kit.fontawesome.com/337be747ec.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/assignment2.css">
 </head>
 <body>
     <h1>Convert Celsius to Fahrenheit</h1>
-        <div class="body">
-            <button class="button" onclick="convert()">Convert</button>
-            <p id="result"></p>
+        <div class="container">
+
+            <div class="display">
+                    <img src="/img/sunA3.png" alt="Sun">
+                    <img src="/img/snowA3.jpg" alt="">
+            </div>
+            
+            <div>
+                <button onclick="convert()">Convert</button>
+                <p id="result"></p>
+            </div>
         </div>
     
 
